--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
     "theme_color": "#000000",
     "icons": [
         {
-            "src": "img/icon-192x192.jpg",
+            "src": "img/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/jpg"
         },
         {
-            "src": "img/icon-512x512.jpg",
+            "src": "img/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/jpg"
         }
