--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
     "name": "The Chill Spot",
     "short_name": "The Chill Spot",
+    "description": "PWA donde se muestra el menu de un restaurant/bar",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
